@@ -1,3 +1,8 @@
+2019-03-09  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/84504
+	* gfortran.dg/pointer_init_10.f90: New test case.
+
 2019-03-09  John David Anglin  <dave.anglin@bell.net>
 
 	* gfortran.dg/ieee/ieee_9.f90: Fix typo.
